--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
   <body>
     <nav class="navbar">
       <div class="navbar-container container">
-        <input type="checkbox" />
+        <input type="checkbox" name="" id="" />
         <div class="hamburger-lines">
           <span class="line line1"></span>
           <span class="line line2"></span>
           <span class="line line3"></span>
         </div>
         <ul class="menu-items">
-          <li><a href="#showcase">Home</a></li>
+          <li><a href="">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#food">Food</a></li>
+          <li><a href="#food">Category</a></li>
           <li><a href="#food-menu">Menu</a></li>
           <li><a href="#testimonials">Testimonial</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
-        <h1 class="logo">SR</h1>
+        <h1 class="logo">RS</h1>
       </div>
     </nav>
     <section class="showcase-area" id="showcase">
@@ -198,25 +198,12 @@
       <h2 class="testimonial-title">What Our Customers Say</h2>
       <div class="testimonial-container container">
         <div class="testimonial-box">
-          <div class="star-rating">
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-          </div>
-          <p class="testimonial-text">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit
-            voluptas cupiditate aspernatur odit doloribus non.
-          </p>
           <div class="customer-detail">
             <div class="customer-photo">
               <img src="https://i.postimg.cc/5Nrw360Y/male-photo1.jpg" alt="" />
               <p class="customer-name">Ross Lee</p>
             </div>
           </div>
-        </div>
-        <div class="testimonial-box">
           <div class="star-rating">
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -228,6 +215,8 @@
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit
             voluptas cupiditate aspernatur odit doloribus non.
           </p>
+        </div>
+        <div class="testimonial-box">
           <div class="customer-detail">
             <div class="customer-photo">
               <img
@@ -237,8 +226,6 @@
               <p class="customer-name">Amelia Watson</p>
             </div>
           </div>
-        </div>
-        <div class="testimonial-box">
           <div class="star-rating">
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -250,12 +237,25 @@
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit
             voluptas cupiditate aspernatur odit doloribus non.
           </p>
+        </div>
+        <div class="testimonial-box">
           <div class="customer-detail">
             <div class="customer-photo">
               <img src="https://i.postimg.cc/fy90qvkV/male-photo3.jpg" alt="" />
               <p class="customer-name">Ben Roy</p>
             </div>
           </div>
+          <div class="star-rating">
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+          </div>
+          <p class="testimonial-text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit
+            voluptas cupiditate aspernatur odit doloribus non.
+          </p>
         </div>
       </div>
     </section>
